# simple-todo-rust

./: Cargo.toml  storage.txt
src/: constants.rs  main.rs
src/actions/: mod.rs  storage.rs
src/utils/: dev.rs  mod.rs
